# EvaLooop

./: .gitignore  MANIFEST.in  README.md  intialize.py  pyproject.toml  requirements.txt  results.json  setup.py
config/: models.yaml  tasks.yaml
evaloop/: __init__.py  __main__.py  cli.py
evaloop/analysis/: __init__.py  analyzer.py
evaloop/core/: __init__.py  config.py  evaluator.py
evaloop/evaluation/: code_testing.py  cycle.py  py_testing.py
evaloop/models/: factory.py  open_source_vllm.py  registry.py
evaloop/tasks/: code_summarization.py  factory.py
evaloop/utils/: logging_utils.py  validation.py
experiments/: generation_summarization.yaml
scripts/: analyze_results.py  run_experiment_at.py  run_experiment_cgs.py  run_experiment_ct.py  run_experiment_test.py
src/evaluation/: executor.py
src/models/: base.py  closed_source.py  open_source.py
src/tasks/: code_generation.py  code_translation.py
